Time to read style no wrapping fix

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -89,7 +89,10 @@ header a {
     font-weight: 400;
     color: #666;
 }
-.post-list-item .time-to-read { font-size: 0.8rem; }
+.post-list-item .time-to-read { 
+    font-size: 0.8rem; 
+    display: inline-block;
+}
 
 
 
